feat: support for jdk8