@@ -1,11 +1,12 @@
 package io.github.genie.sql.api;
 
+import java.util.Arrays;
 import java.util.List;
 
 public interface Update {
 
     default <T> T insert(T entity, Class<T> entityType) {
-        return insert(List.of(entity), entityType).get(0);
+        return insert(Arrays.asList(entity), entityType).get(0);
     }
 
     <T> List<T> insert(List<T> entities, Class<T> entityType);
