@@ -5,6 +5,7 @@ import io.github.genie.sql.api.Slice;
 import io.github.genie.sql.api.Sliceable;
 import io.github.genie.sql.builder.QueryStructures.SliceImpl;
 
+import java.util.Collections;
 import java.util.List;
 
 public interface AbstractCollector<T> extends Collector<T> {
@@ -13,7 +14,7 @@ public interface AbstractCollector<T> extends Collector<T> {
     default Slice<T> slice(int offset, int limit) {
         int count = count();
         if (count <= offset) {
-            return new SliceImpl<>(List.of(), count, offset, limit);
+            return new SliceImpl<>(Collections.emptyList(), count, offset, limit);
         } else {
             List<T> list = getList(offset, limit);
             return new SliceImpl<>(list, count, offset, limit);
@@ -25,7 +26,7 @@ public interface AbstractCollector<T> extends Collector<T> {
     default <R> R slice(Sliceable<T, R> sliceable) {
         int count = count();
         if (count <= sliceable.offset()) {
-            return sliceable.collect(List.of(), count);
+            return sliceable.collect(Collections.emptyList(), count);
         } else {
             List<T> list = getList(sliceable.offset(), sliceable.limit());
             return sliceable.collect(list, count);
