@@ -1,30 +1,22 @@
 package io.github.genie.sql.builder;
 
-import io.github.genie.sql.api.Column;
-import io.github.genie.sql.api.Constant;
-import io.github.genie.sql.api.Expression;
-import io.github.genie.sql.api.ExpressionHolder;
+import io.github.genie.sql.api.*;
 import io.github.genie.sql.api.ExpressionOperator.PathOperator;
 import io.github.genie.sql.api.ExpressionOperator.Predicate;
-import io.github.genie.sql.api.Operation;
-import io.github.genie.sql.api.Operator;
-import io.github.genie.sql.api.Path;
 import io.github.genie.sql.builder.QueryStructures.ColumnMeta;
 import io.github.genie.sql.builder.QueryStructures.ConstantMeta;
 import io.github.genie.sql.builder.QueryStructures.OperationMeta;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public interface ExpressionBuilders {
 
     Expression TRUE = ExpressionBuilders.of(true);
 
     static boolean isTrue(Expression expression) {
-        return expression instanceof Constant constant
-               && Boolean.TRUE.equals(constant.value());
+        return expression instanceof Constant
+               && Boolean.TRUE.equals(((Constant) expression).value());
     }
 
     static Expression of(ExpressionHolder<?, ?> expression) {
@@ -64,24 +56,27 @@ public interface ExpressionBuilders {
     }
 
     static Expression operate(Expression l, Operator o, Expression r) {
-        if (o.isMultivalued() && l instanceof Operation lo && lo.operator() == o) {
+        if (o.isMultivalued() && l instanceof Operation && ((Operation) l).operator() == o) {
+            Operation lo = (Operation) l;
             List<Expression> args = Util.concat(lo.args(), r);
             return new OperationMeta(lo.operand(), o, args);
         }
-        return new OperationMeta(l, o, List.of(r));
+        return new OperationMeta(l, o, Collections.singletonList(r));
     }
 
     static Expression operate(Expression l, Operator o) {
-        return operate(l, o, List.of());
+        return operate(l, o, Collections.emptyList());
     }
 
     static Expression operate(Expression l, Operator o, List<? extends Expression> r) {
         if (o == Operator.NOT
-            && l instanceof Operation operation
-            && operation.operator() == Operator.NOT) {
+            && l instanceof Operation
+            && ((Operation) l).operator() == Operator.NOT) {
+            Operation operation = (Operation) l;
             return operation.operand();
         }
-        if (o.isMultivalued() && l instanceof Operation lo && lo.operator() == o) {
+        if (o.isMultivalued() && l instanceof Operation && ((Operation) l).operator() == o) {
+            Operation lo = (Operation) l;
             List<Expression> args = Util.concat(lo.args(), r);
             return new OperationMeta(lo.operand(), o, args);
         }
@@ -91,10 +86,8 @@ public interface ExpressionBuilders {
     static <T> List<PathOperator<T, ?, Predicate<T>>> toExpressionList(Collection<Path<T, ?>> paths) {
         return paths.stream()
                 .<PathOperator<T, ?, Predicate<T>>>map(Q::get)
-                .toList();
+                .collect(Collectors.toList());
     }
-
-
 
 
 }
