@@ -19,6 +19,7 @@ import io.github.genie.sql.api.Path.StringPath;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static io.github.genie.sql.api.Operator.AND;
 import static io.github.genie.sql.api.Operator.NOT;
@@ -83,7 +84,7 @@ public final class Q {
     @SafeVarargs
     public static <T> Predicate<T> and(ExpressionHolder<T, Boolean> predicate,
                                        ExpressionHolder<T, Boolean>... predicates) {
-        List<Expression> metas = Arrays.stream(predicates).map(ExpressionHolder::expression).toList();
+        List<Expression> metas = Arrays.stream(predicates).map(ExpressionHolder::expression).collect(Collectors.toList());
         Expression expression = ExpressionBuilders.operate(predicate.expression(), AND, metas);
         return DefaultExpressionOperator.ofBoolOps(expression);
     }
@@ -91,7 +92,7 @@ public final class Q {
     @SafeVarargs
     public static <T> Predicate<T> or(ExpressionHolder<T, Boolean> predicate,
                                       ExpressionHolder<T, Boolean>... predicates) {
-        List<Expression> metas = Arrays.stream(predicates).map(ExpressionHolder::expression).toList();
+        List<Expression> metas = Arrays.stream(predicates).map(ExpressionHolder::expression).collect(Collectors.toList());
         Expression expression = ExpressionBuilders.operate(predicate.expression(), OR, metas);
         return DefaultExpressionOperator.ofBoolOps(expression);
     }
@@ -106,12 +107,12 @@ public final class Q {
 
     @SafeVarargs
     public static <T> List<Order<T>> desc(Path<T, ? extends Comparable<?>>... paths) {
-        return Arrays.stream(paths).map(Q::desc).toList();
+        return Arrays.stream(paths).map(Q::desc).collect(Collectors.toList());
     }
 
     @SafeVarargs
     public static <T> List<Order<T>> asc(Path<T, Comparable<?>>... paths) {
-        return Arrays.stream(paths).map(Q::asc).toList();
+        return Arrays.stream(paths).map(Q::asc).collect(Collectors.toList());
     }
 
 
