@@ -10,12 +10,12 @@ import io.github.genie.sql.builder.Expressions;
 import io.github.genie.sql.builder.meta.*;
 import io.github.genie.sql.executor.jdbc.JdbcQueryExecutor.PreparedSql;
 import io.github.genie.sql.executor.jdbc.JdbcQueryExecutor.QuerySqlBuilder;
+import lombok.Data;
+import lombok.experimental.Accessors;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.Map.Entry;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
@@ -108,17 +108,20 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
 
         private void buildProjectionPaths() {
             Selection selected = queryStructure.select();
-            if (selected instanceof SingleColumn singleColumn) {
+            if (selected instanceof SingleColumn) {
+                SingleColumn singleColumn = (SingleColumn) selected;
                 selectedExpressions.add(singleColumn.column());
-            } else if (selected instanceof MultiColumn multiColumn) {
+            } else if (selected instanceof MultiColumn) {
+                MultiColumn multiColumn = (MultiColumn) selected;
                 selectedExpressions.addAll(multiColumn.columns());
             } else if (queryStructure.select().resultType() == queryStructure.from().type()) {
                 EntityType table = mappers
                         .getEntity(queryStructure.select().resultType());
                 for (Attribute mapping : table.fields()) {
-                    if (!(mapping instanceof BasicAttribute column)) {
+                    if (!(mapping instanceof BasicAttribute)) {
                         continue;
                     }
+                    BasicAttribute column = (BasicAttribute) mapping;
                     Column columns = Expressions.ofPath(column.name());
                     selectedExpressions.add(columns);
                     selectedAttributes.add(mapping);
@@ -127,9 +130,10 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                 Projection projectionMapping = mappers
                         .getProjection(queryStructure.from().type(), queryStructure.select().resultType());
                 for (ProjectionAttribute mapping : projectionMapping.attributes()) {
-                    if (!(mapping.baseField() instanceof BasicAttribute column)) {
+                    if (!(mapping.baseField() instanceof BasicAttribute)) {
                         continue;
                     }
+                    BasicAttribute column = (BasicAttribute) mapping.baseField();
 
                     Column columns = Expressions.ofPath(column.name());
                     selectedExpressions.add(columns);
@@ -163,14 +167,16 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
             if (fetchClause != null) {
                 for (Column fetch : fetchClause) {
                     Attribute attribute = getAttribute(fetch);
-                    if (!(attribute instanceof AnyToOneAttribute am)) {
+                    if (!(attribute instanceof AnyToOneAttribute)) {
                         continue;
                     }
+                    AnyToOneAttribute am = (AnyToOneAttribute) attribute;
                     EntityType entityTypeInfo = am.referenced();
                     for (Attribute field : entityTypeInfo.fields()) {
-                        if (!(field instanceof BasicAttribute mapping)) {
+                        if (!(field instanceof BasicAttribute)) {
                             continue;
                         }
+                        BasicAttribute mapping = (BasicAttribute) field;
                         sql.append(",");
                         Column column = Expressions.concat(fetch, mapping.name());
                         appendPaths(column);
@@ -198,7 +204,8 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
             From from = queryStructure.from();
             if (from instanceof Entity) {
                 appendFromTable();
-            } else if (from instanceof SubQuery subQuery) {
+            } else if (from instanceof SubQuery) {
+                SubQuery subQuery = (SubQuery) from;
                 appendSubQuery(subQuery.queryStructure());
             }
             appendFromAlias();
@@ -242,7 +249,7 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
         }
 
         protected StringBuilder appendBlank(StringBuilder sql) {
-            return sql.isEmpty() || " (,+-*/=><".indexOf(sql.charAt(sql.length() - 1)) >= 0 ? sql : sql.append(' ');
+            return sql.length() == 0 || " (,+-*/=><".indexOf(sql.charAt(sql.length() - 1)) >= 0 ? sql : sql.append(' ');
         }
 
 
@@ -270,11 +277,14 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
 
 
         protected void appendExpression(List<Object> args, Expression expression) {
-            if (expression instanceof Constant constant) {
+            if (expression instanceof Constant) {
+                Constant constant = (Constant) expression;
                 appendConstant(args, constant);
-            } else if (expression instanceof Column column) {
+            } else if (expression instanceof Column) {
+                Column column = (Column) expression;
                 appendPaths(column);
-            } else if (expression instanceof Operation operation) {
+            } else if (expression instanceof Operation) {
+                Operation operation = (Operation) expression;
                 appendOperation(args, operation);
             } else {
                 throw new UnsupportedOperationException("unknown type " + expression.getClass());
@@ -283,7 +293,8 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
 
         private void appendConstant(List<Object> args, Constant constant) {
             Object value = constant.value();
-            if (value instanceof Boolean b) {
+            if (value instanceof Boolean) {
+                Boolean b = (Boolean) value;
                 appendBlank().append(b ? 1 : 0);
             } else {
                 appendBlank().append('?');
@@ -297,7 +308,7 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
             Operator operator0 = getOperator(leftOperand);
             List<? extends Expression> rightOperand = operation.args();
             switch (operator) {
-                case NOT -> {
+                case NOT: {
                     appendOperator(operator);
                     sql.append(' ');
                     if (operator0 != null && operator0.priority() > operator.priority()) {
@@ -307,9 +318,22 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                     } else {
                         appendExpression(args, leftOperand);
                     }
+                    break;
                 }
-                case AND, OR, LIKE, MOD, GT, EQ, NE, GE, LT,
-                        LE, ADD, SUBTRACT, MULTIPLY, DIVIDE -> {
+                case AND:
+                case OR:
+                case LIKE:
+                case MOD:
+                case GT:
+                case EQ:
+                case NE:
+                case GE:
+                case LT:
+                case LE:
+                case ADD:
+                case SUBTRACT:
+                case MULTIPLY:
+                case DIVIDE: {
                     appendBlank();
                     if (operator0 != null && operator0.priority() > operator.priority()) {
                         sql.append('(');
@@ -329,9 +353,20 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                             appendExpression(args, value);
                         }
                     }
+                    break;
                 }
-                case LOWER, UPPER, SUBSTRING, TRIM, LENGTH,
-                        NULLIF, IF_NULL, MIN, MAX, COUNT, AVG, SUM -> {
+                case LOWER:
+                case UPPER:
+                case SUBSTRING:
+                case TRIM:
+                case LENGTH:
+                case NULLIF:
+                case IF_NULL:
+                case MIN:
+                case MAX:
+                case COUNT:
+                case AVG:
+                case SUM: {
                     appendOperator(operator);
                     sql.append('(');
                     appendExpression(args, leftOperand);
@@ -340,8 +375,9 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                         appendExpression(args, expression);
                     }
                     sql.append(")");
+                    break;
                 }
-                case IN -> {
+                case IN: {
                     if (rightOperand.isEmpty()) {
                         appendBlank().append(0);
                     } else {
@@ -356,17 +392,20 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                         }
                         sql.append(")");
                     }
+                    break;
                 }
-                case BETWEEN -> {
+                case BETWEEN: {
                     appendBlank();
                     appendExpression(args, leftOperand);
                     appendOperator(operator);
                     appendBlank();
                     Expression operate = Expressions
-                            .operate(rightOperand.get(0), Operator.AND, List.of(rightOperand.get(1)));
+                            .operate(rightOperand.get(0), Operator.AND, Collections.singletonList(rightOperand.get(1)));
                     appendExpression(args, operate);
+                    break;
                 }
-                case IS_NULL, IS_NOT_NULL -> {
+                case IS_NULL:
+                case IS_NOT_NULL: {
                     appendBlank();
                     if (operator0 != null && operator0.priority()
                                              > operator.priority()) {
@@ -378,8 +417,10 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                     }
                     appendBlank();
                     appendOperator(operator);
+                    break;
                 }
-                default -> throw new UnsupportedOperationException("unknown operator " + operator);
+                default:
+                    throw new UnsupportedOperationException("unknown operator " + operator);
             }
         }
 
@@ -405,15 +446,17 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
             }
             Class<?> type = queryStructure.from().type();
 
-            Column join = Expressions.ofPaths(List.of(expression.get(0)));
+            Column join = Expressions.ofPaths(Collections.singletonList(expression.get(0)));
 
             for (String path : expression) {
                 EntityType info = mappers.getEntity(type);
                 Attribute attribute = info.getAttribute(path);
                 if (i++ == iMax) {
-                    if (attribute instanceof AnyToOneAttribute joinColumnMapper) {
+                    if (attribute instanceof AnyToOneAttribute) {
+                        AnyToOneAttribute joinColumnMapper = (AnyToOneAttribute) attribute;
                         sb.append(joinColumnMapper.joinColumnName());
-                    } else if (attribute instanceof BasicAttribute basicColumnMapper) {
+                    } else if (attribute instanceof BasicAttribute) {
+                        BasicAttribute basicColumnMapper = (BasicAttribute) attribute;
                         sb.append(basicColumnMapper.columnName());
                     } else {
                         throw new IllegalStateException();
@@ -434,7 +477,9 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
         protected void insertJoin(int sqlIndex) {
             StringBuilder sql = new StringBuilder();
 
-            joins.forEach((k, v) -> {
+            for (Entry<Column, Integer> entry : joins.entrySet()) {
+                Column k = entry.getKey();
+                Integer v = entry.getValue();
                 Attribute attribute = getAttribute(k);
                 EntityType entityTypeInfo = mappers.getEntity(attribute.javaType());
                 sql.append(" left join `").append(entityTypeInfo.tableName()).append("`");
@@ -449,7 +494,8 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                     Attribute parentAttribute = getAttribute(parent);
                     appendTableAttribute(sql, parentAttribute, parentIndex);
                 }
-                if (attribute instanceof AnyToOneAttribute join) {
+                if (attribute instanceof AnyToOneAttribute) {
+                    AnyToOneAttribute join = (AnyToOneAttribute) attribute;
                     sql.append(".").append(join.joinColumnName()).append("=");
                     appendTableAttribute(sql, attribute, v);
                     String referenced = join.referencedColumnName();
@@ -460,7 +506,7 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
                 } else {
                     throw new IllegalStateException();
                 }
-            });
+            }
             this.sql.insert(sqlIndex, sql);
 
         }
@@ -475,7 +521,11 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
         }
 
         Operator getOperator(Expression e) {
-            return e instanceof Operation expression ? expression.operator() : null;
+            if (e instanceof Operation) {
+                Operation expression = (Operation) e;
+                return expression.operator();
+            }
+            return null;
         }
 
         protected StringBuilder appendTableAttribute(StringBuilder sb, Attribute attribute, Integer index) {
@@ -487,10 +537,12 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
         protected Attribute getAttribute(Column path) {
             Type schema = entity;
             for (String s : path.paths()) {
-                if (schema instanceof AnyToOneAttribute associationProperty) {
+                if (schema instanceof AnyToOneAttribute) {
+                    AnyToOneAttribute associationProperty = (AnyToOneAttribute) schema;
                     schema = associationProperty.referenced();
                 }
-                if (schema instanceof EntityType ts) {
+                if (schema instanceof EntityType) {
+                    EntityType ts = (EntityType) schema;
                     schema = ts.getAttribute(s);
                 } else {
                     throw new IllegalStateException();
@@ -552,6 +604,17 @@ public class MySqlQuerySqlBuilder implements QuerySqlBuilder {
         }
     }
 
-    public record PreparedSqlImpl(String sql, List<?> args, List<Attribute> selected) implements PreparedSql {
+    @Data
+    @Accessors(fluent = true)
+    public static class PreparedSqlImpl implements PreparedSql {
+        private final String sql;
+        private final List<?> args;
+        private final List<Attribute> selected;
+
+        public PreparedSqlImpl(String sql, List<?> args, List<Attribute> selected) {
+            this.sql = sql;
+            this.args = args;
+            this.selected = selected;
+        }
     }
 }
